hphp/hack/test/typecheck/let/let_lambda_hof.php.exp
File "let_lambda_hof.php", line 5, characters 29-47:
Cannot determine types of lambda parameters in strict mode. Please add type hints on parameters. (Typing[4224])
